--- a/src/Style/Navigation.scss
+++ b/src/Style/Navigation.scss
@@ -1,13 +1,13 @@
-.navbtn {
-  background-color: #a62639 !important;
-  color: #e3ebff;
-}
+// .navbtn {
+//   background-color: #a62639 !important;
+//   color: #e3ebff;
+// }
 
-.navbtn:hover {
-  background-color: #e3ebff !important;
-  color: #a62639 !important;
-}
+// .navbtn:hover {
+//   background-color: #e3ebff !important;
+//   color: #a62639 !important;
+// }
 
-.modalLabel {
-  font-weight: 600 !important;
-}
+// .modalLabel {
+//   font-weight: 600 !important;
+// }
